# BSEngine

./: .codacy.yml  .gitattributes  .gitignore  .gitmodules  .mcp.json  .rustfmt.toml  .travis.yml  Architecture.md  Build.bat  Build.sh  CMakeLists.txt  CMakeSettings.json  Cargo.toml  Doxyfile  ENGINE_ROADMAP.md  ExternalPath.txt  Install.bat  Install.sh  Install_Linux.sh  Install_Mac.sh  Install_Windows.bat  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
Engine/CoreLibrary/: CMakeLists.txt  Character.h  Hash.h  Swap.h  Type.h
Engine/GameBase/: CMakeLists.txt  System.cpp
Engine/Math/: CMakeLists.txt  MathFunctions.cpp  Matrix3x3.h  Matrix4x4.h  Quaternion.cpp  Random.cpp  Random.h  Rotator.h  Vector2.cpp  Vector3.cpp  Vector3.h  Vector4.h
Engine/Memory/: CMakeLists.txt  ComponentAllocator.h  ComponentMemory.h  HeapAllocator.h  HeapMemory.cpp  HeapMemory.h  ManagerAllocator.h  ManagerMemory.h  MemoryManager.cpp  MemoryManager.h  OneFrameAllocator.h  OneFrameMemory.cpp  OneFrameMemory.h  ResourceAllocator.h  ResourceMemory.h
Engine/Thread/: CMakeLists.txt  ThreadManager.cpp  ThreadManager.h  ThreadManagerAccesser.h
Source/Runtime/: CMakeLists.txt
Source/Runtime/Core/: CMakeLists.txt
Source/Runtime/Core/Private/: Assertion.cpp  CharSet.cpp  ConfigFile.cpp  Core.h  Debug.cpp  DelegateBase.cpp  FileSystem.cpp  JsomHelper.cpp  Json.cpp  Log.cpp  Logger.cpp  Name.cpp  PlatformWindow.cpp
Source/Runtime/Core/Public/: Accessor.h  Assertion.h  CharSet.h  ConfigFile.h  Core.h  Debug.h  Delegate.h  DelegateBase.h  DelegateInst.h  Event.h  FileSystem.h  IteratorFinder.h  Json.h  JsonForwarder.h  JsonHelper.h  Log.h  LogCategory.h  Logger.h  Macro.h  Math.h  (+5 more)
Source/Runtime/CoreLibrary/: Exception.h  Utility.h
Source/Runtime/Engine/: CMakeLists.txt  Component.cpp  ComponentManager.cpp  Entity.cpp  Entity.h  Game.cpp  Game.h  Scene.cpp  SceneManager.h  Transform.cpp  WindowManager.h
Source/Runtime/Framework/: CMakeLists.txt
Source/Runtime/GameBase/: CMakeLists.txt
Source/Runtime/Input/: CMakeLists.txt
Source/Runtime/Launch/: CMakeLists.txt  Launch.cpp  LaunchWindows.cpp
Source/Runtime/Memory/: CMakeLists.txt  HeapMemory.cpp  OneFrameAllocator.h  ResourceMemory.h
Source/Runtime/Plugin/: CMakeLists.txt
Source/Runtime/Render/: InputManager.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  RenderTree.cpp  RenderTree.h  Resource.h  ResourceManager.h  Shader.h  SpriteComponent.h  Texture.h  UpdatableComponent.h  VertexArray.h
Source/Runtime/Thread/: CMakeLists.txt
Source/Runtime/Window/: CMakeLists.txt
Tests/: CMakeLists.txt  CoreTest.cpp  TestMain.cpp
apps/bsengine-editor-app/: Cargo.toml
apps/bsengine-editor-app/src/: main.rs
crates/bsengine-app/: Cargo.toml
crates/bsengine-app/src/: angular_velocity.rs  animation_player.rs  animation_state_machine.rs  app.rs  damping.rs  external_impulse.rs  follow.rs  gravity.rs  lib.rs  lifetime.rs  main.rs  nav_mesh.rs  shield.rs  tests.rs  time.rs  timer.rs  tween.rs  velocity.rs
crates/bsengine-app/tests/: mcp.rs  plugin_ordering.rs  plugin_system.rs  render_pipeline.rs  scene_asset.rs  scripting.rs  window_input.rs
crates/bsengine-asset/: Cargo.toml
crates/bsengine-asset/src/: handle.rs  lib.rs  plugin.rs  server.rs  types.rs
crates/bsengine-audio/: Cargo.toml
crates/bsengine-audio/src/: components.rs  lib.rs  plugin.rs  world.rs
crates/bsengine-demo/: Cargo.toml
crates/bsengine-demo/src/: main.rs
crates/bsengine-editor/: Cargo.toml
crates/bsengine-editor/src/: lib.rs  plugin.rs  snapshot.rs
crates/bsengine-gltf/: Cargo.toml
crates/bsengine-gltf/src/: animation.rs  lib.rs  loader.rs  plugin.rs
crates/bsengine-input/: Cargo.toml
crates/bsengine-input/src/: convert.rs  lib.rs  plugin.rs  state.rs  types.rs
crates/bsengine-mcp/: .gitignore  Cargo.toml
crates/bsengine-mcp/src/: game_tools.rs  lib.rs  plugin.rs  registry.rs  server.rs  session.rs  test_tools.rs  tool.rs
crates/bsengine-mcp/tests/: session.rs  test_tools.rs
crates/bsengine-network/: Cargo.toml
crates/bsengine-network/src/: lib.rs  packet.rs  plugin.rs  session.rs
crates/bsengine-physics/: Cargo.toml
crates/bsengine-physics/src/: components.rs  lib.rs  plugin.rs  world.rs
crates/bsengine-plugin/: Cargo.toml
crates/bsengine-plugin/src/: descriptor.rs  lib.rs  loader.rs  plugin.rs  registry.rs
crates/bsengine-rhi-wgpu/: Cargo.toml
crates/bsengine-rhi-wgpu/src/: gizmo.rs  lib.rs  mesh.rs  plugin.rs  post_process.rs  rhi.rs  surface.rs  texture.rs  theme.rs
crates/bsengine-runtime/: Cargo.toml
crates/bsengine-runtime/src/: main.rs  scene_systems.rs  test_mode.rs  test_protocol.rs  test_query.rs
crates/bsengine-runtime/tests/: replay.rs  test_mode.rs
crates/bsengine-scene/: Cargo.toml
crates/bsengine-scene/src/: lib.rs  plugin.rs  types.rs
crates/bsengine-scripting/: Cargo.toml
crates/bsengine-scripting/src/: lib.rs  ops.rs  plugin.rs  runtime.rs  save.rs
engine/: CMakeLists.txt
engine/GameBase/: CMakeLists.txt
engine/Launch/: Main_Linux.cpp
engine/Memory/: CMakeLists.txt  MemoryManager.cpp
engine/Thread/: CMakeLists.txt  ThreadManager.h
engine/include/: AccesserGenerator.h  Allocator.h  Array.h  CString.h  Character.h  ComponentAllocator.h  ComponentMemory.h  Core.h  Deque.h  HeapAllocator.h  HeapMemory.h  IManager.h  Interface.h  Iterator.h  List.h  Macro.h  ManagerAllocator.h  ManagerMacro.h  ManagerMemory.h  Map.h  MathFunctions.h  Matrix3x3.h  Matrix4x4.h  MemoryManager.h  MemoryManagerAccesser.h  NewDelete.h  OneFrameAllocator.h  OneFrameMemory.h  Quaternion.h  Queue.h  Random.h  ResourceAllocator.h  ResourceMemory.h  Set.h  Stack.h  Str.h  System.h  ThreadManager.h  Type.h  Vector2.h  (+2 more)
engine/src/: Allocator.cpp  HeapMemory.cpp  Main_Linux.cpp  Main_Windows.cpp  MathFunctions.cpp  Matrix3x3.cpp  Matrix4x4.cpp  MemoryManager.cpp  MemoryManagerAccesser.cpp  NewDelete.cpp  Quaternion.cpp  Random.cpp  System.cpp  ThreadManager.cpp  ThreadManagerAccesser.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  main.cpp
games/cube-evader/: Cargo.toml  project.toml
games/cube-evader/src/: main.rs
(+1344 files in other folders)
