[package]
name = "bsengine-editor-app"
description = "Standalone BSEngine editor — Unity/Unreal-style viewport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "bsengine-editor"
path = "src/main.rs"

[dependencies]
bsengine-app    = { workspace = true }
bsengine-core   = { workspace = true }
bsengine-ecs    = { workspace = true }
bsengine-editor = { workspace = true }
bsengine-gltf   = { workspace = true }
bsengine-input  = { workspace = true }
bsengine-render = { workspace = true }
bsengine-rhi-wgpu = { workspace = true }
bsengine-scene     = { workspace = true }
bsengine-scripting = { workspace = true }
bsengine-window    = { workspace = true }
bevy_ecs        = { workspace = true }
glam            = { workspace = true }
