[package]
name = "bsengine-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bsengine"
path = "src/main.rs"

[dependencies]
bsengine-core.workspace = true
bsengine-ecs.workspace = true
bevy_app.workspace = true
bsengine-window.workspace = true
bsengine-input.workspace = true

[dev-dependencies]
bsengine-ecs.workspace = true
bevy_ecs.workspace = true
bsengine-input.workspace = true
bsengine-window.workspace = true
