[package]
name = "bsengine-asset"
description = "Asset management — texture and mesh loading pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
bsengine-core.workspace = true
bsengine-ecs.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true

[dev-dependencies]
bsengine-app.workspace = true
