[package]
name = "bsengine-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bsengine-ecs    = { workspace = true }
bsengine-mcp    = { workspace = true }
bsengine-scene  = { workspace = true }
bsengine-core   = { workspace = true }
bsengine-render = { workspace = true }
bevy_app        = { workspace = true }
bevy_ecs        = { workspace = true }
serde_json      = { workspace = true }
glam            = { workspace = true }
ron             = { workspace = true }
serde           = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
bsengine-app = { workspace = true }
