[package]
name = "bsengine-gltf"
description = "GLTF/GLB import — mesh, material, and texture extraction"
version.workspace = true
edition.workspace = true

[dependencies]
bsengine-core.workspace = true
bsengine-render.workspace = true
bsengine-rhi-wgpu.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
gltf.workspace = true
tracing.workspace = true

[dev-dependencies]
bsengine-app.workspace = true
pollster.workspace = true
