[package]
name = "bsengine-input"
description = "Keyboard and mouse input abstraction backed by winit events"
version.workspace = true
edition.workspace = true

[dependencies]
bsengine-core.workspace = true
bsengine-ecs.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
winit.workspace = true
gilrs.workspace = true

[dev-dependencies]
bsengine-app.workspace = true
