[package]
name = "bsengine-mcp"
description = "Model Context Protocol runtime — tool registration and JSON-RPC dispatch"
version.workspace = true
edition.workspace = true

[dependencies]
bsengine-core.workspace = true
bsengine-ecs.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
bsengine-app.workspace = true
