[package]
name = "bsengine-plugin"
description = "Runtime plugin loader — discover and register plugins from TOML manifests"
version.workspace = true
edition.workspace = true

[dependencies]
bsengine-core.workspace = true
bsengine-ecs.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
toml.workspace = true
serde.workspace = true

[dev-dependencies]
bsengine-app.workspace = true
