[package]
name = "bsengine-rhi-wgpu"
description = "wgpu implementation of bsengine-rhi — GPU surface, pipelines, buffers"
version.workspace = true
edition.workspace = true

[dependencies]
bsengine-core.workspace = true
bsengine-ecs.workspace = true
bsengine-input.workspace = true
bsengine-rhi.workspace = true
bsengine-window.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
wgpu.workspace = true
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui_dock.workspace = true
egui-phosphor.workspace = true
serde_json.workspace = true
bevy_reflect.workspace = true
bytemuck.workspace = true
glam.workspace = true
image.workspace = true
pollster.workspace = true
tracing.workspace = true

[dev-dependencies]
bsengine-app.workspace = true
